tests/ui/macros/issue-100199.stderr
error[E0405]: cannot find trait `MyTrait` in the expanded code of procedural macro `issue_100199::struct_with_bound`
  --> $DIR/issue-100199.rs:1:1
   |
LL | #[issue_100199::struct_with_bound]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in the expanded code of procedural macro `issue_100199::struct_with_bound`
   |
   = note: this error originates in the attribute macro `issue_100199::struct_with_bound` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0405`.
